[tool.poetry]
name = "zsxqproject"
version = "0.1.0"
description = ""
authors = ["Doscript"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pdfkit = "^1.0.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
